Further visibility fix for drawer button

--- a/content/style/default.css
+++ b/content/style/default.css
@@ -1,5 +1,7 @@
 .mdl-layout__drawer-button {
   color:#000 !important;
+  background:rgba(255,255,255,0.75);
+  border-radius: 5px;
 }
 
 .btc-banner {
